REST API for Departments, fix bugs
